--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
             </div>
         </div>
     </main>
+    <div style="display: none;" class="offline">
+        <img src="./img/connection-error-512.png" alt="error">
+    </div>
     <script src="script.js"></script>
 </body>
 
